--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,45 +16,48 @@
 <body>
     <main>
         <section class="section1">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-md">
-                  <a class="navbar-brand" href="#"><h2 class="logo">IP-G2</h2></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <a class="navbar-brand" href="../HTML/index.html">
+                    <h2 class="logo text-white">IP-G2</h2>
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color:white;">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" style="color:white">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="../HTML/index.html">Home</a>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                          aria-expanded="false">
                           Our Stories
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li>
-                                <a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
-                              </li>
-                              <li>
-                                <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
-                              </li>
-                              <li>
-                                <a class="dropdown-item" href="../HTML/story3.html"
-                                  >Justus Wamswa Chemirmir</a>
-                              </li>
-                              <li>
-                                <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
-                              </li>
-                              <li><a class="dropdown-item" href="../HTML/story5.html">Kevin Langat</a></li>
+                          <li>
+                            <a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="../HTML/story3.html">Justus Wamswa Chemirmir</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
+                          </li>
+                          <li><a class="dropdown-item" href="../HTML/story5.html">Kevin Langat</a></li>
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="../HTML/authors.html">The Authors</a>
+                        <a href="../HTML/author.html" class="nav-link text-white">Authors</a>
                       </li>
                     </ul>
                   </div>
                 </div>
-              </nav>
+            </nav>
 
             <div class="pic-text">
                 <div class="pic-home-page">
@@ -71,32 +74,35 @@
         <section class="section4">
             <div class="jumbotron journey-begin-jumbotron">
                 <div class="container-md">
-                    <div class="row mb-5">
-                        <div class="col-md-12 began">
-                                <h1>The Beginning</h1>
-                                <div class="underline underline1"></div>
+                    <div class="row">
+                        <div class="heading heading1">
+                            <h1>The Beginning</h1>
+                            <div class="underline underline2"></div>
                         </div>
                     </div>
 
-                    <div class="row image-row align-items-center justify-content-center">
+                    <div class="row image-row align-items-center justify-content-evenly">
+                        
+                        <div class="col-md-4 mt-4">
+                            <div class="pt-5">
+                                <h3 class="p-3">Small Beginnings They Say</h3>
+                                <p class="p-3">It started when we saw that we can be a change maker in the world we live in.
+                                    True or not!!
+                                    We realized that we can become a pillar that will define our world some day!!</p>
+                                <p class="mt-4 p-3">
+                                    <a href="../HTML/author.html" class="btn btn-outline-warning stories-button">The Authors</a>
+                                </p>
+                            </div>
+                        </div>
                         <div class="col-md-6" style="position: relative;">
                             <img src="../IMAGES/ALU1.jpg" alt="ALU" class="img-fluid picture-ALU">
                             <img src="../IMAGES/ALU2.jpg" class="ALU images-ALU">
                         </div>
-                        <div class="col-md-6">
-                         <div class="ps-5">
-                            <h3>Small Beginnings They Say</h3>
-                            <p>It started when we saw that we can be a change maker in the world we live in.
-                            True or not!!
-                            We realized that we can become a pillar that will define our world some day!!</p>
-                            <p class="mt-4">
-                                <a href="../HTML/authors.html" class="btn btn-outline-warning stories-button">The Authors</a>
-                            </p>
-                         </div>
-                        </div>
                     </div>
+                    <div class="down-arrow"></div>
                 </div>
             </div>
+
         </section>
 
 
@@ -110,7 +116,7 @@
 
                     <div class="hexagon hex1">
                         <a href="../HTML/story1.html">
-                        <h2 class="desc">Hi, I am Deborah </h2>
+                            <h2 class="desc">Deborah</h2>
                         </a>
                     </div>
                     <div class="hexagon hex2">
@@ -119,7 +125,7 @@
                         </a>
                     </div>
                     <div class="hexagon hex3">
-                        <a href="">
+                        <a href="../HTML/story5.html">
                             <h2 class="desc">Kevin</h2>
                         </a>
                     </div>
@@ -129,12 +135,13 @@
                         </a>
                     </div>
                     <div class="hexagon hex5">
-                        <a href="">
+                        <a href="../HTML/story4.html">
                             <h2 class="desc">Mangaliso</h2>
                         </a>
                     </div>
                 </div>
             </div>
+            <div class="down-arrow"></div>
 
         </section>
 
@@ -143,11 +150,9 @@
                 <div class="jumbotron footer-jumbotron">
                     <div class="container-md">
                         <div class="row">
-                            <div class="col-md-6">
-                                <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
-                            </div>
-                            <div class="col-md-6">
+                            <div class="col-md-12 pt-3">
                                 <h3>MADE WITH LOVE</h3>
+                                <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
                             </div>
                         </div>
                     </div>
