--- a/HTML/index.html
+++ b/HTML/index.html
@@ -146,7 +146,7 @@
                             <div class="col-md-6">
                                 <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 made">
                                 <h3>MADE WITH LOVE</h3>
                             </div>
                         </div>
