--- a/HTML/index.html
+++ b/HTML/index.html
@@ -115,22 +115,22 @@
                     </div>
                     <div class="hexagon hex2">
                         <a href="../HTML/story2.html">
-                            <h2 class="desc">Josephine</h2>
+                            <h2 class="desc">Hi, I am Josephine</h2>
                         </a>
                     </div>
                     <div class="hexagon hex3">
-                        <a href="">
-                            <h2 class="desc">Kevin</h2>
+                        <a href="../HTML/story5.html">
+                            <h2 class="desc">Hi, I am Kevin</h2>
                         </a>
                     </div>
                     <div class="hexagon hex4">
                         <a href="../HTML/story3.html">
-                            <h2 class="desc">Justus</h2>
+                            <h2 class="desc">Hi, I am Justus</h2>
                         </a>
                     </div>
                     <div class="hexagon hex5">
-                        <a href="">
-                            <h2 class="desc">Mangaliso</h2>
+                        <a href="../HTML/story4.html">
+                            <h2 class="desc">Hi, I am Mangaliso</h2>
                         </a>
                     </div>
                 </div>
@@ -146,8 +146,10 @@
                             <div class="col-md-6">
                                 <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
                             </div>
-                            <div class="col-md-6 made">
-                                <h3>MADE WITH LOVE</h3>
+                            <div class="col-md-3"></div>
+                            <div class="col-md-1"></div>
+                            <div class="col-md-2">
+                                <h3 class="mt-3">MADE WITH LOVE</h3>
                             </div>
                         </div>
                     </div>
