--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -397,8 +397,10 @@
                     <div class="col-md-6">
                         <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
                     </div>
-                    <div class="col-md-6 made">
-                        <h3>MADE WITH LOVE</h3>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-1"></div>
+                    <div class="col-md-2">
+                        <h3 class="mt-3">MADE WITH LOVE</h3>
                     </div>
                 </div>
             </div>
