add new changes

--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -53,7 +53,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="../HTML/authors.html" class="nav-link text-white">Authors</a>
+              <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
             </li>
           </ul>
         </div>
@@ -61,6 +61,7 @@
     </nav>
   </header>
 
+  <div class="container-md">
   <main class="testimonial-grid">
     <article class="testimonial">
       <span class="card-number fw-bold">01</span>
@@ -98,28 +99,15 @@
       <span class="card-number fw-bold">03</span>
       <h5 class="card-title  ">Social Life</h5>
       <p>
-        I can sometimes be seen as a boring person because I love to be
-              by myself either watching a movie or doing some basic stuffs. So
-              far I have tried to become more sociable rather than being an
-              introvert. <br />
-              Most people tend to think I am an introvert and others too an
-              extrovert. I love spending time alone and doing things that
-              excite me the most. But I have some social life that includes
-              both personal and professional interactions. I see it as an
-              element of learning, joy, self-fulfillment and personal
-              resilience. I love working as a team with my peers groups and
-              friends because I see it as a way of learning from people. I
-              spend time with friends, example friends with the same interest
-              as me. I love to listen to people so I can hear diverse ideas of
-              people about life.
-              I have loved to talk to friends and interact more with them because of
-              the friends I made when I started studying in Mauritius. I actually love to make
-              friends
+        I have come to realize how important it is to keep a social life. Hence, Music and African cultural dance have been a way of expressing myself over the years. 
+        This is because having a social life substantially enhances our everyday activities. Therefore, participating in music and African 
+        cultural dance has made life more exciting and enabled me to live outside of the normal routine and boredom.
       </p>
+      <img src="../IMAGES/culture.webp" alt="Cultural" class="img-fluid">
     </article>
     <article class="testimonial">
       <span class="card-number fw-bold">04</span>
-      <h5 class="card-title  ">My country</h5>
+      <h5 class="card-title">My country</h5>
       <p>
         Nigeria is my home country and a beautiful place to be. More also, Nigeria is made up of 36 states and
         several ethnic groups. Within these ethnic groups are several tribes of a total of 371. Thus, I am from
@@ -130,16 +118,16 @@
         Hence, I speak Edo and English languages because English is the official language of Nigeria and I am an
         Edo by the tribe. <br>
       </p> <br> <br>
-      <h5><em>Pictures of the Edo State</em></h5>
+      <h5 class="card-title"><em>Pictures of the Edo State</em></h5>
       <img src="../IMAGES/Benin_City.jpg" alt="Benin City" class="img-fluid">
-      <h6><em>City of the Benin Kingdom</em></h6><br><br>
-      <img src="../IMAGES/leopard.webp" alt="Leopard" class="img-fluid mt-4">
-      <h6><em>The Benin people of Nigeria believe that the Benin leopard is a symbol of Justice and powerful beast,
+      <p class="note mt-3"><em>City of the Benin Kingdom</em></p><br>
+      <img src="../IMAGES/leopard.webp" alt="Leopard" class="img-fluid">
+      <p class="note mt-3"><em>The Benin people of Nigeria believe that the Benin leopard is a symbol of Justice and powerful beast,
         which has royal qualities.
-        The leopard reigns over the Savannah, like a king does over his subjects.</em></h6><br><br>
-      <img src="../IMAGES/culture.webp" alt="Kakum National Park" class="img-fluid mt-4">
-      <h6><em>Newly crowned Oba of Benin Kingdom Eheneden Erediauwa (Ewuare II) is guided through a symbolic bridge by
-        the palace chiefs during his coronation in Benin city, Nigeria in 2016.</em></h6>
+        The leopard reigns over the Savannah, like a king does over his subjects.</em></p><br>
+      <img src="../IMAGES/culture.webp" alt="Kakum National Park" class="img-fluid">
+      <p class="note mt-3"><em>Newly crowned Oba of Benin Kingdom Eheneden Erediauwa (Ewuare II) is guided through a symbolic bridge by
+        the palace chiefs during his coronation in Benin city, Nigeria in 2016.</em></p>
     </article>
     <article class="testimonial grid-col-2">
       <span class="card-number fw-bold">05</span>
@@ -157,7 +145,7 @@
               admission.
               A few weeks later, I resumed and was excited to properly begin the journey of my passion despite not
               having enough funds to sponsor my education. <br />
-            </p>
+      </p>
             <h5 class="card-title py-3">ALU Journey</h5>
             <p>
               It was during the first month of my resumption at the university that my guardian sent me the ALU
@@ -202,7 +190,6 @@
               For this reason, I trusted the process of getting to ALU. Therefore, I will advise prospective students to
               give their best in all they do and believe that it will all end well.
             </p>
-            <!-- <img src="../IMAGES/ALUNIGHT.webp" alt="ALU AT NIGHT" class="img-fluid py-3"> -->
             <!-- <a href="#" class="btn btn-outline-warning"></a> -->
             <p>
               Additionally, my time at ALU thus far has been amazing, as I am not only better academically but also
@@ -211,7 +198,9 @@
               prices.
               I also hope to expand as I continue my academic and entrepreneurship journey.
               </p>
+              <img src="../IMAGES/Copy of hairsaloon logo design - Made with PosterMyWall (3).jpg" alt="hair" class="img-fluid py-3" style="width: 300px; height: 300px; align-items: center; margin-left: 150px; border-radius: 20px;"> 
     </article>
+
     <article class="testimonial">
       <span class="card-number fw-bold">06</span>
       <h5 class="card-title  ">Life in Mauritius</h5>
@@ -227,8 +216,7 @@
         It was through the management style, I discovered that I had extra time to venture into entrepreneurship.
         Then I used the opportunity to start my own establishment on campus, called Jossy Nation Hair Touch.
       </p>
-      <img src="../IMAGES/Flic.jpg" alt="Flic en Flac" class="img-fluid mt-4">
-      <h6><em>Flic En Flac Beach</em></h6> <br><br>
+      <img src="../IMAGES/Copy of hair - Made with PosterMyWall (1).jpg" alt="saloon" class="img-fluid mt-4">
       <p>
         Although I like traveling and exploring new places, I hardly ever see the time to do such because of my
         busy schedule. Hence, I use my free time to search for new hairstyles and update my saloon skills.
@@ -238,61 +226,20 @@
     <article class="testimonial grid-col-2">
       <span class="card-number fw-bold">07</span>
       <h5 class="card-title  ">Ideas For the Future & Careers</h5>
-
       <p>
-        I can sometimes be seen as a boring person because I love to be
-        by myself either watching a movie or doing some basic stuffs. So
-        far I have tried to become more sociable rather than being an
-        introvert. <br />
-        Most people tend to think I am an introvert and others too an
-        extrovert. I love spending time alone and doing things that
-        excite me the most. But I have some social life that includes
-        both personal and professional interactions. I see it as an
-        element of learning, joy, self-fulfillment and personal
-        resilience. I love working as a team with my peers groups and
-        friends because I see it as a way of learning from people. I
-        spend time with friends, example friends with the same interest
-        as me. I love to listen to people so I can hear diverse ideas of
-        people about life.
+        My idea for the future is to explore my mission. Thus, my mission is to use my voices, leadership, influence, and teamwork to make progress for “Girl Child Education awareness” around the world, especially in Africa. 
+        This will be done by setting goals and objectives as well as maintaining a sense of realism while challenging myself in the future.  Also, 
+        I will make sure my goals are measurable, have deadlines, and that they are particular to my mission's goals.
+        <br> <br>
+        Aside from the plans I have for my future goals, my career is an important aspect that has its own plans too. Therefore, the idea of my career in lecturing includes; pursuing an area of expertise, earning a postgraduate degree,
+        gain relevant experience, and seeking out an adjunct position as a lecturer. After I have succeeded, I will continue my academic journey by writing for academic publications, and secure a tenured position. As well as publishing my own books.
+        <br> <br>
+        Additionally, I will expand my hair salon business to a full beauty company where everything of beauty can be gotten from. 
       </p>
-      <h5 class="card-title py-3">Ideas for Future</h5>
-      <p>
-        Because of the Covid-19 pandemic, we had to travel to Mauritius
-        in January, 2021 instead of September, 2020. It was quite a
-        fascinating situation because we had to do some few lessons
-        online from September to December, 2020 where learnt about
-        certain things of ALU and how to use learning materials provided
-        by the institution. <br />
-        I had to be in quarantine in a country i had no idea about and
-        it was suffocating especially because of the inability to go out
-        and explore the place. I can sometimes be seen as a boring person because I love to be
-        by myself either watching a movie or doing some basic stuffs. So
-        far I have tried to become more sociable rather than being an
-        Most people tend to think I am an introvert and others too an
-        extrovert. I love spending time alone and doing things that
-        excite me the most. But I have some social life that includes
-        both personal and professional interactions. I see it as an
-        element of learning, joy, self-fulfillment and personal
-        resilience. I love working as a team with my peers groups and
-        friends because I see it as a way of learning from people. I
-        spend time with friends, example friends with the same interest
-        as me. I love to listen to people so I can hear diverse ideas of
-        extrovert. I love spending time alone and doing things that
-        excite me the most. But I have some social life that includes
-        both personal and professional interactions. I see it as an
-        element of learning, joy, self-fulfillment and personal
-        resilience. I love working as a team with my peers groups and
-        friends because I see it as a way of learning from people. I
-        spend time with friends, example friends with the same interest
-        as me. I love to listen to people so I can hear diverse ideas ofm
-        friends because I see it as a way of learning from people. I
-        spend time with friends, example friends with the same interest
-        as me. I love to listen to people so I can hear diverse ideas ofm
-
-      </p>
-
+      <img src="../IMAGES/ideas.jpg" alt="ideas" class="img-fluid ideas">
     </article>
   </main>
+  </div>
 
   <!-- begin wwww.htmlcommentbox.com -->
   <div class="jumbotron comment-jumbotron">
@@ -330,20 +277,24 @@
   </script>
   <!-- end www.htmlcommentbox.com -->
 
-    <section class="section3">
-      <footer>
-          <div class="jumbotron footer-jumbotron">
-              <div class="container-md">
-                  <div class="row">
-                      <div class="col-md-12 pt-3">
-                          <h3>MADE WITH LOVE</h3>
-                          <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </footer>
-  </section>
+  <section class="section3">
+    <footer>
+        <div class="jumbotron footer-jumbotron">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                    </div>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-1"></div>
+                    <div class="col-md-2">
+                        <h3 class="mt-3">MADE WITH LOVE</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
