--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -52,7 +52,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="../HTML/authors.html" class="nav-link text-white">Authors</a>
+                            <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
                         </li>
                     </ul>
                 </div>
@@ -60,6 +60,7 @@
         </nav>
     </header>
 
+    <div class="container-md">
     <main class="testimonial-grid">
         <article class="testimonial grid-col-2">
             <span class="card-number fw-bold">01</span>
@@ -88,7 +89,7 @@
         </article>
         <article class="testimonial">
             <span class="card-number fw-bold">03</span>
-            <h5 class="card-title  ">My country</h5>
+            <h5 class="card-title">My country</h5>
             <p>
                 Kenya is a beautiful country in East Africa nicknamed the cradle of humanity. <br>It is known for its
                 beautiful nature and wildlife and is the only country in the world to have a National Park in its
@@ -96,7 +97,7 @@
             </p>
             <br>
             <br>
-            <h3 style="font-size: 0.7rem;"><em>Some Historical Places in Kenya</em></h3>
+            <h5 class="card-title"><em>Some Historical Places in Kenya</em></h5>
 
             <h3></h3>
             <img src="../IMAGES/thomas-bennie-1jlJrr4XGkU-unsplash.jpg" alt="thomas" class="img-fluid mt-4">
@@ -156,6 +157,7 @@
                 community.
             </p>
         </article>
+
         <article class="testimonial">
             <span class="card-number fw-bold">06</span>
             <h5 class="card-title  ">Life In Mauritius</h5>
@@ -169,8 +171,9 @@
                 like when my friend caused an accident, and we had to pay for the damages.
             </p>
             <img src="../IMAGES/IMG_3306.JPG" alt="" class="img-fluid mt-2 images">
-            <p style="font-size: 0.7rem;"><em>Exloring every corner, depth and height of Mauritius</em></p>
+            <p class="note"><em>Exloring every corner, depth and height of Mauritius</em></p>
         </article>
+
         <article class="testimonial">
             <span class="card-number fw-bold">07</span>
             <h5 class="card-title  ">Ideas For the Future & Careers</h5>
@@ -185,6 +188,7 @@
 
         </article>
     </main>
+    </div>
 
     <!-- begin wwww.htmlcommentbox.com -->
     <div class="jumbotron comment-jumbotron">
@@ -222,20 +226,24 @@
       </script>
       <!-- end www.htmlcommentbox.com -->
       
-        <section class="section3">
-            <footer>
-                <div class="jumbotron footer-jumbotron">
-                    <div class="container-md">
-                        <div class="row">
-                            <div class="col-md-12 pt-3">
-                                <h3>MADE WITH LOVE</h3>
-                                <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
-                            </div>
+      <section class="section3">
+        <footer>
+            <div class="jumbotron footer-jumbotron">
+                <div class="container-md">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                        </div>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                        <div class="col-md-2">
+                            <h3 class="mt-3">MADE WITH LOVE</h3>
                         </div>
                     </div>
                 </div>
-            </footer>
-        </section>
+            </div>
+        </footer>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
