--- a/HTML/authors.html
+++ b/HTML/authors.html
@@ -120,18 +120,25 @@
     </div>
   </header>
 
-     <section class="section3">
-        <footer>
-                <div class="container-md footer">
-                    <div class="row">
-                        <div class="col-md-12 pt-3">
-                            <h3>MADE WITH LOVE</h3>
-                            <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
-                        </div>
+
+  <section class="section3">
+    <footer>
+        <div class="jumbotron footer-jumbotron">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                    </div>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-1"></div>
+                    <div class="col-md-2">
+                        <h3 class="mt-3">MADE WITH LOVE</h3>
                     </div>
                 </div>
-        </footer>
-    </section>  
+            </div>
+        </div>
+    </footer>
+  </section>    
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
