--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -21,14 +21,13 @@
           <h2 class="logo text-white">IP-G2</h2>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-          style="background-color:white;">
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="../HTML/index.html">Home</a>
+              <a class="nav-link active text-white" aria-current="page" href="../HTML/index.html" style="color: white;">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
@@ -52,7 +51,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="../HTML/authors.html" class="nav-link text-white">Authors</a>
+              <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
             </li>
           </ul>
         </div>
