--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -52,7 +52,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="../HTML/authors.html" class="nav-link text-white">Authors</a>
+                            <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
                         </li>
                     </ul>
                 </div>
@@ -60,6 +60,7 @@
         </nav>
     </header>
 
+    <div class="container-md">
     <main class="testimonial-grid">
         <article class="testimonial">
             <span class="card-number fw-bold">01</span>
@@ -77,6 +78,7 @@
             <a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
             <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a> -->
         </article>
+
         <article class="testimonial">
             <span class="card-number fw-bold">02</span>
             <h5 class="card-title  ">Background</h5>
@@ -86,8 +88,8 @@
                 mountainous area which makes a for a great scenery especially.
                 Like most rural communities in the kingdom, it is survived by subsistence farming.
             </p>
-            <img src="../IMAGES/patrick-tomasso-5hvn-2WW6rY-unsplash.jpg" class="img-fluid" />
         </article>
+
         <article class="testimonial">
             <span class="card-number fw-bold">03</span>
             <h5 class="card-title  ">My country</h5>
@@ -144,7 +146,7 @@
                 I would advice prospective students that the ALU journey will often seem different and very intense even
                 with the application process, but it very much worth it.
             </p>
-            <img src="../IMAGES/ALU1.jpg" class="img-fluid" style="margin-left: 50%; transform:translateX(-50%);"/>
+            <img src="../IMAGES/ALU1.jpg" class="img-fluid" style="margin-left: 50%; transform:translateX(-50%); width:300px; height: 300px;"/>
         </article>
         <article class="testimonial">
             <span class="card-number fw-bold">05</span>
@@ -176,6 +178,7 @@
 
         </article>
     </main>
+    </div>
 
     <!-- begin wwww.htmlcommentbox.com -->
     <div class="jumbotron comment-jumbotron">
@@ -213,20 +216,24 @@
       </script>
       <!-- end www.htmlcommentbox.com -->
 
-        <section class="section3">
-            <footer>
-                <div class="jumbotron footer-jumbotron">
-                    <div class="container-md">
-                        <div class="row">
-                            <div class="col-md-12 pt-3">
-                                <h3>MADE WITH LOVE</h3>
-                                <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
-                            </div>
+      <section class="section3">
+        <footer>
+            <div class="jumbotron footer-jumbotron">
+                <div class="container-md">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                        </div>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-1"></div>
+                        <div class="col-md-2">
+                            <h3 class="mt-3">MADE WITH LOVE</h3>
                         </div>
                     </div>
                 </div>
-            </footer>
-        </section>
+            </div>
+        </footer>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
