add new changes

--- a/HTML/authors.html
+++ b/HTML/authors.html
@@ -121,7 +121,7 @@
   </header>
 
 
-  <section class="section3">
+  <!-- <section class="section3">
     <footer>
         <div class="jumbotron footer-jumbotron">
             <div class="container-md">
@@ -138,7 +138,7 @@
             </div>
         </div>
     </footer>
-  </section>    
+  </section>     -->
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
